# ICP-GPU

./: .gitignore  Cargo.toml  README.md
cuda/: bench_bls_verify.cu  bench_checkpoint_sha256.cu  bench_context_overhead.cu  bench_full_pairing.cu  bench_launch_overhead.cu  bench_mem_pool.cu  bench_merkle.cu  bench_oracle_sha256.cu  bls12_381_pairing.cu  blst_aliases.c  debug_batch.cu  fp.cuh  fp_inv_chain.cuh  g2_coeffs.h  gpu_mem_pool.cuh  merkle_sha256.cu  msm_api.cu  msm_full.cu  pk42_coeffs.h  profile_bls_detail.cu  profile_bls_overhead.cu  profile_bls_split.cu  test_bls_verify.cu  test_decompress.cu  test_easy_part.cu  test_final_exp.cu  test_fp12.cu  test_fp2.cu  test_fp6.cu  test_fp_mul_asm.cu  test_fp_only.cu  test_frobenius.cu  test_full_pairing.cu  test_fused_decompress_msm.cu  test_inv_chain.cu  test_isolate.cu  test_miller.cu  test_miller_debug.cu  test_miller_precomp.cu  test_miller_v2.cu  (+10 more)
experiments/: cpu_contention_bench.c  cpu_contention_experiment.sh
gpu-crypto/: Cargo.toml  build.rs
gpu-crypto/cuda/: field_sppark.cuh
gpu-crypto/src/: lib.rs
gpu_merkle/: Cargo.toml  merkle_api.cu  merkle_api_async.cu
gpu_merkle/src/: lib.rs  main.rs
ic-bench/: Cargo.toml
ic-bench/src/: main.rs
ic-integration/: README.md  bootstrap.sh  collect_metrics.sh  launch.sh  provisional_whitelist.json
ic-integration/gpu_crypto/: BUILD.bazel  lib.rs
ic-integration/gpu_crypto/cuda/: api.cu  blst_aliases.c  decompress.cu  field_sppark.cuh  msm.cu  sha256.cuh
ic-integration/patches/: ic-gpu-consensus.patch
int64/: fp64.cuh  test_fp64.cu  test_tower64.cu  tower64.cuh
lib/: bench_lib.cu  bench_sppark_fp.cu  field.cuh  field_sppark.cuh  pairing.cuh  sha256.cuh  test_cyc_sq.cu  test_lib.cu  test_sppark_fp.cu  test_sppark_fp2.cu  test_sppark_full.cu
oracle/: Cargo.toml
oracle/src/: main.rs  merkle_sha256.rs
rns/: bench_int64.cu  gen_bases.py  gen_constants_v3.py  gen_cuda_constants.py  gen_pairing_constants.py  rns_constants.cuh  rns_constants_v3.cuh  rns_fp.cuh  rns_fp_v2.cuh  rns_fp_v2_div.cuh  rns_fp_v2_test.cuh  rns_fp_v3.cuh  rns_pairing.cuh  rns_pairing_constants.cuh  test_alpha2_debug.py  test_alpha_debug.py  test_alpha_trace.cu  test_barrett.cu  test_be_only.cu  test_chain_debug.cu  test_finalexp_debug.cu  test_finalexp_trace.cu  test_fp2_debug.cu  test_h12_debug.cu  test_mul_internals.cu  test_normalize.cu  test_profile_mul.cu  test_quick.cu  test_rns_bls_verify.cu  test_rns_debug.py  test_rns_fp.cu  test_rns_mul_debug.cu  test_rns_pairing.cu  test_rns_tower.cu  test_rns_v2.cu  test_rns_vs_rust.cu  test_trace_residues.cu  test_tred.py  test_v2_div.cu  test_v2_no_barrett.cu
src/: bench_cpu.rs  get_points.rs  oracle.rs  reference_pairing.rs
test_msm/: Cargo.toml  build.rs
test_msm/src/: main.rs
verify/: test_field_arithmetic.py  test_miller.py
