[package]
name = "gpu_pairing"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3"
ic_bls12_381 = { version = "0.10", default-features = false, features = ["groups", "pairings", "alloc"] }
group = "0.13"
ff = "0.13"
pairing = "0.23"
rand = "0.9"
rand_core = "0.6"
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[[bin]]
name = "bench_cpu"
path = "src/bench_cpu.rs"

[[bin]]
name = "reference_pairing"
path = "src/reference_pairing.rs"

[[bin]]
name = "bench_gpu"
path = "src/bench_gpu.rs"

[[bin]]
name = "oracle"
path = "src/oracle.rs"

[[bin]]
name = "get_points"
path = "src/get_points.rs"
